[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# rrt_inc = { path = "../rrt_inc" }
sim = {path = "../sim" }
rrt_lib = { path = "../rrt_lib" }
rrt_demo = { path = "../rrt_demo" }
util = { path = "../util" }
pysparse = { path = "../pysparse" }
rrt_fast = { path = "../rrt_fast" }

anyhow = "1.0"
indicatif = "0.17.8"
plotters = "0.3.5"
rand = "0.8.5"
png = "0.17"
hex = "0.4.3"
gethostname = "1.0.1"
lazy_static = "1.5.0"
measure_time = "0.9"
rayon = "1.10.0"