[package]
name = "pysparse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand = "0.8.5"
lazy_static = "1.5.0"
rayon = "1.10.0"
indicatif = "0.17.8"
serde = "1.0.219"
serde_json = "1.0"
nix = "0.29"
measure_time = "0.9"

clap = { version = "4.5", features = ["derive"] }

rrt_lib = { path = "../rrt_lib" }
sim = { path = "../sim" }
util = { path = "../util" }
