[package]
name = "rrt_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.1", features = ["small_rng"] }
util = { path = "../util" }
peak_alloc = "0.2.0"
get-size = "0.1.4"
get-size-derive = "0.1.3"
rand_chacha = "0.9.0"
anyhow = "1.0"