[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
get-size = "0.1.4"
get-size-derive = "0.1.3"
num = "0.4.1"
chrono = { version = "0.4.31", features = ["clock"] }
anyhow = "1.0"
